syntax = "proto3";

enum PageRefState {
  TODO      = 0;
  DOWNLOAD  = 1;
  DEEP_SCAN = 2;
  PARSE     = 3;
}